--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "myfirstparsing",
+  "name": "chartmelon",
   "version": "1.0.0",
-  "description": "",
-  "main": "chart.js",
+  "description": "MelonChart Parser",
+  "main": "src/chart.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd src && node chart.js"
   },
-  "author": "Mocha(Dong-Hyun Kim)",
-  "license": "ISC",
+  "author": "GeniusMocha",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "iconv-lite": "^0.4.24",
-    "mariadb": "^2.0.5",
+    "iconv-lite": "^0.5.0",
+    "mariadb": "^2.1.1",
     "path": "^0.12.7",
-    "python-shell": "^1.0.7"
+    "python-shell": "^1.0.8"
   }
 }
